# my-sample-projects

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
logger/: CMakeLists.txt
logger/include/: Logger.hpp
logger/src/: Logger.cpp  LoggerImpl.cpp  LoggerImpl.hpp
logger/tests/: CMakeLists.txt  main.cpp  test_logger.cpp
logger/writer/: CMakeLists.txt  Directory.cpp  Directory.hpp  LogWriter.hpp
logger/writer/file/: LogWriter.cpp
logger/writer/terminal/: LogWriter.cpp
standard/: CMakeLists.txt
standard/include/: function.hpp
standard/src/: function.cpp
standard/tests/: CMakeLists.txt  main.cpp  sample_rvalue.cpp  test_function.cpp
thread/: CMakeLists.txt
thread/include/: LockedQueue.hpp  Queue.hpp  Thread.hpp  ThreadPool.hpp  Timer.hpp
thread/src/: Thread.cpp  Timer.cpp
thread/tests/: CMakeLists.txt  main.cpp  sample_async.cpp  test_queue.cpp  test_thread.cpp  test_threadpool.cpp  test_timer.cpp
